--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -16,7 +16,7 @@
         android:id="@+id/downloadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_download"
+        android:src="@drawable/baseline_download_24"
         android:contentDescription="@string/img" />
 
 </LinearLayout>
