--- a/app/src/main/res/layout/fragment_feature.xml
+++ b/app/src/main/res/layout/fragment_feature.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.FeatureFragment">
+    tools:context=".ui.fragments.FeatureFragment">
 
     <Button
         android:id="@+id/button_sign_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_out"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_upload_file"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/upload_file"
-        app:layout_constraintTop_toBottomOf="@id/button_sign_out"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_sign_out" />
 
     <Button
         android:id="@+id/button_list_files"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/list_files"
-        app:layout_constraintTop_toBottomOf="@id/button_upload_file"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_upload_file" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
