--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,9 @@
             app:destination="@id/fileListFragment" />
         <action
             android:id="@+id/action_featureFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/featureFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
